# lab3_sem2

./: Abs.h  ArraySequence.h  CMakeLists.txt  ClassConclusions.h  Complex.h  DynamicArray.h  LinearForm.h  LinearShape.h  LinkedList.h  ListSequence.h  README.md  RectangularMatrix.h  Sequence.h  Ui.h  Vector.h  main.cpp
Tests/: ComplexTests.h  LinearFormTests.h  LinearShapeTests.h  MatrixTests.h  StandartTests.h  VectorTests.h
